Fixing image position issue on iOS devices, hopefully

--- a/_sass/case-study.scss
+++ b/_sass/case-study.scss
@@ -1,7 +1,3 @@
-.white-overlay {
-  background-color: rgba($white, .75)
-}
-
 .case-study-container {
 
   .page-nav {
