--- a/_sass/global.scss
+++ b/_sass/global.scss
@@ -18,17 +18,29 @@ html {
     //   z-index: -1;
     // }
 }
+
 body {
-  background: $grey url(../assets/images/background--waves.jpg) center / cover no-repeat fixed;
 
   &::before {
+    content: ' ';
+    display: block;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -10;
+    background: $grey url(../assets/images/background--waves.jpg) center / cover no-repeat fixed;
+  }
+
+  &::after {
     content: ' ';
     height: 100%;
     width: 100%;
     position: fixed;
     top: 0;
     background: rgba(255, 255, 255, .5);
-    z-index: -1;
+    z-index: -2;
   }
 }
 
